redmine: removed `provider` label

--- a/redmine/templates/redmine-secrets.yaml
+++ b/redmine/templates/redmine-secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    provider: redmine
+    app: {{ template "fullname" . }}
     release: {{ .Release.Name }}
     heritage: "{{ .Release.Service }}"
 type: Opaque
