--- a/redmine/templates/redmine-secrets.yaml
+++ b/redmine/templates/redmine-secrets.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ template "fullname" . }}
   labels:
     app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Name }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 type: Opaque
