--- a/redmine/values.yaml
+++ b/redmine/values.yaml
@@ -1,11 +1,35 @@
+## Bitnami Redmine image version
+## ref: https://hub.docker.com/r/bitnami/redmine/tags/
+##
 imageTag: 3.3.0-r0
-imagePullPolicy:
-redmineUser: user
-redminePassword: bitnami
-redmineEmail: user@example.com
-redmineLanguage: en
-smtpHost:
-smtpPort:
-smtpUser:
-smtpPassword:
-smtpTls:
+
+## Specify a imagePullPolicy
+## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
+
+## Admin user credentials
+## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
+##
+# redmineUser: user
+# redminePassword: bitnami
+
+## Admin user email
+## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
+##
+# redmineEmail: user@example.com
+
+## Default UI language
+## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
+##
+# redmineLanguage: en
+
+## SMTP mail delivery configuration
+## ref: https://github.com/bitnami/bitnami-docker-redmine/#smtp-configuration
+##
+# smtpHost:
+# smtpPort:
+# smtpUser:
+# smtpPassword:
+# smtpTls: true
