--- a/mariadb/templates/mariadb-secrets.yaml
+++ b/mariadb/templates/mariadb-secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    provider: "{{ .Chart.Name }}"
+    app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Name }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
