--- a/mongodb/manifests/mongodb-rc.yaml
+++ b/mongodb/manifests/mongodb-rc.yaml
@@ -43,16 +43,14 @@ spec:
           exec:
             command:
             - mongo
-            - --eval
-            - "db.adminCommand('ping')"
+            - ping
           initialDelaySeconds: 30
           timeoutSeconds: 5
         readinessProbe:
           exec:
             command:
             - mongo
-            - --eval
-            - "db.adminCommand('ping')"
+            - ping
           initialDelaySeconds: 5
           timeoutSeconds: 1
         volumeMounts:
