wildfly: fix typo, Closes #76

--- a/wildfly/templates/wildfly-secrets.yaml
+++ b/wildfly/templates/wildfly-secrets.yaml
@@ -8,4 +8,4 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  wildfly-password: {{ {{ default "" .Values.wildflyPassword | b64enc | quote }}
+  wildfly-password: {{ default "" .Values.wildflyPassword | b64enc | quote }}
