--- a/mongodb/manifests/mongodb-rc.yaml
+++ b/mongodb/manifests/mongodb-rc.yaml
@@ -43,14 +43,16 @@ spec:
           exec:
             command:
             - mongo
-            - ping
+            - --eval
+            - "db.adminCommand('ping')"
           initialDelaySeconds: 30
           timeoutSeconds: 5
         readinessProbe:
           exec:
             command:
             - mongo
-            - ping
+            - --eval
+            - "db.adminCommand('ping')"
           initialDelaySeconds: 5
           timeoutSeconds: 1
         volumeMounts:
