--- a/rabbitmq/tpl/values.toml
+++ b/rabbitmq/tpl/values.toml
@@ -7,3 +7,4 @@ rabbitmqNodename = "rabbit"
 rabbitmqClusternodename = ""
 rabbitmqVhost = "/"
 rabbitmqManagerbindip = "0.0.0.0"
+rabbitmqManagerport = "15672"
