rabbitmq: publish `.rabbitmqNodeport`
Refer #82
Closes #84

--- a/rabbitmq/manifests/rabbitmq-rc.yaml
+++ b/rabbitmq/manifests/rabbitmq-rc.yaml
@@ -49,6 +49,8 @@ spec:
         - name: RABBITMQ_MANAGERPORT
           value: "15672"
         ports:
+        - name: rabbitmq
+          containerPort: 5672
         - name: rabbitmq-mgmt
           containerPort: 15672
         livenessProbe:
