--- a/rabbitmq/tpl/rabbitmq-svc.yaml
+++ b/rabbitmq/tpl/rabbitmq-svc.yaml
@@ -9,6 +9,9 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
+  - name: rabbitmq
+    port: {{ .rabbitmqNodeport }}
+    targetPort: rabbitmq
   - name: rabbitmq-mgmt
     port: {{ .rabbitmqManagerport }}
     targetPort: rabbitmq-mgmt
