--- a/jenkins/manifests/jenkins-rc.yaml
+++ b/jenkins/manifests/jenkins-rc.yaml
@@ -27,7 +27,7 @@ spec:
         env:
         - name: JENKINS_USERNAME
           value: "user"
-        - name: JENKIS_PASSWORD
+        - name: JENKINS_PASSWORD
           valueFrom:
             secretKeyRef:
               name: jenkins
