--- a/rabbitmq/manifests/rabbitmq-svc.yaml
+++ b/rabbitmq/manifests/rabbitmq-svc.yaml
@@ -8,11 +8,11 @@ metadata:
     heritage: bitnami
 spec:
   ports:
-  - name: rabbitmq
+  - name: ampq
     port: 5672
-    targetPort: rabbitmq
-  - name: rabbitmq-mgmt
+    targetPort: ampq
+  - name: stats
     port: 15672
-    targetPort: rabbitmq-mgmt
+    targetPort: stats
   selector:
     provider: rabbitmq
