--- a/rabbitmq/tpl/rabbitmq-rc.yaml
+++ b/rabbitmq/tpl/rabbitmq-rc.yaml
@@ -47,8 +47,12 @@ spec:
         - name: RABBITMQ_MANAGERPORT
           value: {{ .rabbitmqManagerport | quote }}
         ports:
+        - name: epmd
+          containerPort: 4369
         - name: ampq
           containerPort: {{ .rabbitmqNodeport }}
+        - name: dist
+          containerPort: {{ add 20000 .rabbitmqNodeport }}
         - name: stats
           containerPort: {{ .rabbitmqManagerport }}
         livenessProbe:
