--- a/ghost/tpl/values.toml
+++ b/ghost/tpl/values.toml
@@ -1,3 +1,6 @@
+ghostHostname = ""
+ghostHostIP = ""
+ghostHostPort = "80"
 ghostUser = "user"
 ghostPassword = "bitnami1"
 ghostEmail = "user@example.com"
