Update Ghost revision to 0.7.9-2 - improvements

--- a/ghost/manifests/ghost-rc.yaml
+++ b/ghost/manifests/ghost-rc.yaml
@@ -34,7 +34,7 @@ spec:
             secretKeyRef:
               name: mariadb
               key: mariadb-root-password
-        - name: GHOST_HOSTNAME
+        - name: GHOST_HOST
           value: ""
         - name: GHOST_HOSTPORT
           value: "80"
