--- a/apache/templates/deployment.yaml
+++ b/apache/templates/deployment.yaml
@@ -1,28 +1,26 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
-  name: {{ printf "%s-%s" .Release.Name .Chart.Name | trunc 24 }}
+  name: {{ template "fullname" . }}
   labels:
-    provider: apache
-    release: {{ .Release.Name }}
-    heritage: bitnami
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
-  selector:
-    provider: apache
-    release: {{ .Release.Name }}
-    version: {{ .Values.imageTag }}
   template:
     metadata:
       labels:
-        provider: apache
-        release: {{ .Release.Name }}
-        version: {{ .Values.imageTag }}
-        heritage: bitnami
+        app: {{ template "fullname" . }}
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+        release: "{{ .Release.Name }}"
+        heritage: "{{ .Release.Service }}"
     spec:
       containers:
-      - name: apache
-        image: bitnami/apache:{{ .Values.imageTag }}
+      - name: {{ template "fullname" . }}
+        image: "bitnami/apache:{{ .Values.imageTag }}"
+        imagePullPolicy: {{ template "imagePullPolicy" . }}
         ports:
         - name: http
           containerPort: 80
@@ -32,7 +30,7 @@ spec:
           httpGet:
             path: /
             port: http
-          initialDelaySeconds: 15
+          initialDelaySeconds: 30
           timeoutSeconds: 5
         readinessProbe:
           httpGet:
