--- a/memcached/templates/deployment.yaml
+++ b/memcached/templates/deployment.yaml
@@ -1,35 +1,33 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
-  name: {{ printf "%s-%s" .Release.Name "memcached" | trunc 24 }}
+  name: {{ template "fullname" . }}
   labels:
-    provider: memcached
-    release: {{ .Release.Name }}
-    heritage: bitnami
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
-  selector:
-    provider: memcached
-    release: {{ .Release.Name }}
-    version: {{ .Values.imageTag }}
   template:
     metadata:
       labels:
-        provider: memcached
-        release: {{ .Release.Name }}
-        version: {{ .Values.imageTag }}
-        heritage: bitnami
+        app: {{ template "fullname" . }}
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+        release: "{{ .Release.Name }}"
+        heritage: "{{ .Release.Service }}"
     spec:
       containers:
-      - name: memcached
+      - name: {{ template "fullname" . }}
         image: bitnami/memcached:{{ .Values.imageTag }}
+        imagePullPolicy: {{ template "imagePullPolicy" . }}
         env:
         - name: MEMCACHED_USER
           value: {{ default "" .Values.memcachedUser | quote }}
         - name: MEMCACHED_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" .Release.Name "memcached" | trunc 24 }}
+              name: {{ template "fullname" . }}
               key: memcached-password
         ports:
         - name: memcache
