--- a/ghost/tpl/values.toml
+++ b/ghost/tpl/values.toml
@@ -1,6 +1,6 @@
 ghostHost = ""
 ghostHostIP = ""
-ghostHostPort = "80"
+ghostPort = "80"
 ghostUser = "user"
 ghostPassword = "bitnami1"
 ghostEmail = "user@example.com"
