--- a/postgresql/values.yaml
+++ b/postgresql/values.yaml
@@ -1,4 +1,23 @@
-imageTag: 9.5.3-r1
-postgresUser: postgres
-postgresPassword:
-postgresDb:
+## Bitnami PostgreSQL image version
+## ref: https://hub.docker.com/r/bitnami/postgresql/tags/
+##
+## Default: none
+imageTag: 9.5.3-r2
+
+## Specify a imagePullPolicy
+## Default to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
+#
+
+## Create a database user
+## ref: https://github.com/bitnami/bitnami-docker-postgresql#creating-a-database-user-on-first-run
+##
+# postgresUser: postgres
+# postgresPassword:
+
+## Create a database
+## ref: https://github.com/bitnami/bitnami-docker-postgresql#creating-a-database-on-first-run
+##
+# postgresDb:
