--- a/tomcat/values.yaml
+++ b/tomcat/values.yaml
@@ -1,3 +1,17 @@
-imageTag: 8.0.35-r0
-tomcatUser: user
-tomcatPassword:
+## Bitnami Tomcat image version
+## ref: https://hub.docker.com/r/bitnami/tomcat/tags/
+##
+## Default: none
+imageTag: 8.0.35-r1
+
+## Specify a imagePullPolicy
+## Default to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
+
+## Tomcat management user
+## ref: https://github.com/bitnami/bitnami-docker-tomcat#creating-a-custom-user
+##
+# tomcatUser: user
+# tomcatPassword:
