--- a/wildfly/values.yaml
+++ b/wildfly/values.yaml
@@ -1,3 +1,17 @@
-imageTag: 10.0.0-r0
-wildflyUser: user
-wildflyPassword: password
+## Bitnami Wildfly image version
+## ref: https://hub.docker.com/r/bitnami/wildfly/tags/
+##
+## Default: none
+imageTag: 10.0.0-r1
+
+## Specify a imagePullPolicy
+## Default to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
+
+## Wildfly management user
+## ref: https://github.com/bitnami/bitnami-docker-wildfly#creating-a-custom-user
+##
+# wildflyUser: user
+# wildflyPassword: password
