--- a/drupal/values.yaml
+++ b/drupal/values.yaml
@@ -1,5 +1,30 @@
-imageTag: 8.1.3-r0
+## Bitnami Drupal image version
+## ref: https://hub.docker.com/r/bitnami/drupal/tags/
+##
+imageTag: 8.1.8-r1
 
-drupalUser: user
-drupalPassword: bitnami
-drupalEmail: user@example.com
+## Specify a imagePullPolicy
+## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
+
+## Admin username and password
+## ref: https://github.com/bitnami/bitnami-docker-drupal#configuration
+##
+# drupalUser: user
+# drupalPassword: bitnami
+
+## Admin user email
+## ref: https://github.com/bitnami/bitnami-docker-drupal#configuration
+##
+# drupalEmail: user@example.com
+
+##
+## MariaDB chart configuration
+##
+# mariadb:
+  ## Specify password for root user
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
+  ##
+  # mariadbRootPassword:
