--- a/joomla/values.yaml
+++ b/joomla/values.yaml
@@ -1,9 +1,39 @@
-imageTag: 3.5.1-r0
-joomlaUser: user
-joomlaPassword: bitnami
-joomlaEmail: user@example.com
-smtpHost:
-smtpUser:
-smtpPassword:
-smtpPort:
-smtpProtocol:
+## Bitnami Joomla image version
+## ref: https://hub.docker.com/r/bitnami/joomla/tags/
+##
+imageTag: 3.6.0-r1
+
+## Specify a imagePullPolicy
+## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
+
+## Admin user credentials
+## ref: https://github.com/bitnami/bitnami-docker-joomla#environment-variables
+##
+# joomlaUser: user
+# joomlaPassword: bitnami
+
+## Admin user email
+## ref: https://github.com/bitnami/bitnami-docker-joomla#environment-variables
+##
+# joomlaEmail: user@example.com
+
+## SMTP mail delivery configuration
+## ref: https://github.com/bitnami/bitnami-docker-joomla#environment-variables
+##
+# smtpHost:
+# smtpPort:
+# smtpUser:
+# smtpPassword:
+# smtpProtocol:
+
+##
+## MariaDB chart configuration
+##
+# mariadb:
+  ## Specify password for root user
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
+  ##
+  # mariadbRootPassword:
